--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <body>
     <h1>SCENTED CLEANING</h1>
     <img id="apresent1" src="apresent.jpeg">
+    <h2>APRESENTAMOS PARA VOCÊS</h2>
 <h2>UM SABÃO FEITO A MÃO COM MUITA DEDICAÇÃO E CARINHO</h2>
 <h2>UM CHEIRO LEVE E GOSTOSO</h2>
+<h2>TENHA O SEU TAMBÉM ATRAVÉS E NOSSO SITE OFICIAL!! </h2>
 <p> <a href="https://www.canva.com/design/DAFgCNfgYE0/vcIfcHUwPivdRztasiMGWA/edit?utm_content=DAFgCNfgYE0&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">NOS CONHEÇA POR AQUI</a></p>
 </body>
 </html>
