--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <h2>UM SABÃO FEITO A MÃO COM MUITA DEDICAÇÃO E CARINHO</h2>
 <h2>UM CHEIRO LEVE E GOSTOSO</h2>
 <h2>TENHA O SEU TAMBÉM ATRAVÉS E NOSSO SITE OFICIAL!! </h2>
-<p> <a href="https://www.canva.com/design/DAFgCNfgYE0/vcIfcHUwPivdRztasiMGWA/edit?utm_content=DAFgCNfgYE0&utm_campaign=designshare&utm_medium=link
+<p><a href="https://www.canva.com/design/DAFgCNfgYE0/vcIfcHUwPivdRztasiMGWA/edit?utm_content=DAFgCNfgYE0&utm_campaign=designshare&utm_medium=link/"> Nos conheça mais </a></p>
+
     <iframe width="110" height="200" src="https://www.myinstants.com/instant/ai-que-delicia-mickey-78918/embed/" frameborder="0" scrolling="no"></iframe>
 </body>
 </html>
